added updateTaskCommand added color to priority label

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -357,7 +357,7 @@
 
 #priority .label {
     -fx-text-fill: white;
-    -fx-background-color: #913d43;
+    -fx-background-color: #d31010;
     -fx-padding: 3 4 3 4;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
